2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs:
	  Unsubscibe from property service events when destroyed.

2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Pads/FileScout.cs: Use pad font.

2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj: Updated.

	* MonoDevelop.Ide.Gui.Pads/FileList.cs: Expose method for
	  setting custom font.

2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/PadFontChanger.cs:
	* MonoDevelop.Ide.Gui.Components/PadTreeView.cs: Utility
	  classes for handling pad font changes.

2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Content/TextStylePolicy.cs: Rename
	  EolMarker.Default to EolMarker.Native. Finish updating
	  TextStylePolicy.

	* MonoDevelop.Ide.Gui.OptionPanels/TextStylePolicyPanel.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TextStylePolicyPanelWidget.cs:
	  Enable editing of line ending policy.

	* gtk-gui/gui.stetic: Updated.

2009-02-11  Mike Kestner  <mkestner@novell.com>

	* gtk-gui/gui.stetic: mark the treeview scroller horiz policy
	NEVER.  [Fixes #474463] Also kill a G_WARNING for spinbutton.
	* gtk-gui/*.cs: regen

2009-02-11  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.Gui.Pads/SolutionPad.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/IDEStyleOptionsPanel.cs:
	  Removed unused option.

	* MonoDevelop.Ide.Tasks/TaskService.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/TasksOptionsPanel.cs: Use
	  the new special comment tags api.

	* gtk-gui/MonoDevelop.Ide.DocumentSwitcher.cs:
	* gtk-gui/MonoDevelop.Ide.ExternalTools.ExternalToolPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.IDEStyleOptionsPanelWidget.cs:
	  Updated.

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: added