@@ -1,5 +1,14 @@
 2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MonoDevelop.Ide.Tasks/UserTasksView.cs:
+	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs:
+	* MonoDevelop.Ide.Tasks/CommentTasksView.cs:
+	* MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs:
+	* MonoDevelop.Ide.Gui.Pads/InternalLogPad.cs:
+	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs: Use pad font.
+
+2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs:
 	  Unsubscibe from property service events when destroyed.
 
